# data_wrangling

./: .gitignore  Makefile  csv_to_parquet.sql  dataops_tutorial.py  install_duckdb.sh  iris_summary.sql  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pipeline.yaml
